force-app/main/default/objects/Time_Entry__c/fields/Project_Member__c.field-meta.xml
<CustomField>
    <fullName>Project_Member__c</fullName>
    <label>Project Member</label>
    <referenceTo>Project_Member__c</referenceTo>
    <relationshipLabel>Time Entry</relationshipLabel>
    <relationshipName>Time_Entry</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>