force-app/main/default/objects/Time_Entry__c/fields/Project_Task__c.field-meta.xml
<CustomField>
    <fullName>Project_Task__c</fullName>
    <label>Project Task</label>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipLabel>Time Entry</relationshipLabel>
    <relationshipName>Time_Entry</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>